--- a/テスト0913_02.ipynb
+++ b/テスト0913_02.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOmh70KASWdAR7550zJj5GV",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sherbw28/class_deep/blob/main/%E3%83%86%E3%82%B9%E3%83%880913_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,30 +12,26 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ewiSIwCHy-s8"
+      },
       "source": [
         "# 辞書型(dictionary)\n",
         "キーと値のペアで管理する"
-      ],
-      "metadata": {
-        "id": "ewiSIwCHy-s8"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 辞書型の定義文"
-      ],
       "metadata": {
         "id": "3r7lbxxbzcRI"
-      }
+      },
+      "source": [
+        "## 辞書型の定義文"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dict = {'アップル':1,'ペン':2,\"パイナップル\":3}\n",
-        "print(dict)\n",
-        "print(dict['ペン'])"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,29 +39,53 @@
         "id": "hGsQ1Qp1zg6x",
         "outputId": "aed94dec-d5ac-46ab-ae42-a834b292fb09"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'アップル': 1, 'ペン': 2, 'パイナップル': 3}\n",
             "2\n"
           ]
         }
+      ],
+      "source": [
+        "dict = {'アップル':1,'ペン':2,\"パイナップル\":3}\n",
+        "print(dict)\n",
+        "print(dict['ペン'])"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 辞書型の追加・削除・更新"
-      ],
       "metadata": {
         "id": "tffw1jGI1IgH"
-      }
+      },
+      "source": [
+        "## 辞書型の追加・削除・更新"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ui80u_8C1Tfq",
+        "outputId": "62ec89ca-2263-47ae-fef8-8ce31d5c7844"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'アップル': 1, 'ペン': 2, 'パイナップル': 3, 'バナナ': 100}\n",
+            "{'アップル': 1, 'ペン': 2, 'パイナップル': 3, 'バナナ': 5}\n",
+            "{'アップル': 1, 'ペン': 2, 'パイナップル': 3, 'バナナ': 100}\n",
+            "{'アップル': 1, 'ペン': 2, 'パイナップル': 3}\n"
+          ]
+        }
+      ],
       "source": [
         "print(dict)\n",
         "dict['バナナ'] = 5\n",
@@ -91,40 +94,39 @@
         "print(dict)\n",
         "dict.pop(\"バナナ\")\n",
         "print(dict)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ui80u_8C1Tfq",
-        "outputId": "62ec89ca-2263-47ae-fef8-8ce31d5c7844"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'アップル': 1, 'ペン': 2, 'パイナップル': 3, 'バナナ': 100}\n",
-            "{'アップル': 1, 'ペン': 2, 'パイナップル': 3, 'バナナ': 5}\n",
-            "{'アップル': 1, 'ペン': 2, 'パイナップル': 3, 'バナナ': 100}\n",
-            "{'アップル': 1, 'ペン': 2, 'パイナップル': 3}\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "IaxyQ4dW40IY"
+      },
       "source": [
         "# 文字列の整形\n",
         "文字列の連結と繰り返し"
-      ],
-      "metadata": {
-        "id": "IaxyQ4dW40IY"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d5jLbLtk44T1",
+        "outputId": "66185015-e919-42fe-9756-5da64829d327"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "アップルペン\n",
+            "ペン パイナップル アップル ペン\n",
+            "ポンポンポン\n"
+          ]
+        }
+      ],
       "source": [
         "apple = 'アップル'\n",
         "pen = 'ペン'\n",
@@ -133,41 +135,20 @@
         "print(' '.join(piko))\n",
         "pon = \"ポン\"\n",
         "print(pon * 3)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d5jLbLtk44T1",
-        "outputId": "66185015-e919-42fe-9756-5da64829d327"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "アップルペン\n",
-            "ペン パイナップル アップル ペン\n",
-            "ポンポンポン\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 【重要】文字列の整形(フォーマット)"
-      ],
       "metadata": {
         "id": "J27nQspy7Hkg"
-      }
+      },
+      "source": [
+        "## 【重要】文字列の整形(フォーマット)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print('{} {}:{}'.format(\"アップル\",\"ペン\",\"パイナップル\"))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -175,19 +156,24 @@
         "id": "wi_tefak7PaM",
         "outputId": "4366fe3b-3395-4602-9327-447f2d3214d6"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "アップル ペン:パイナップル\n"
           ]
         }
+      ],
+      "source": [
+        "print('{} {}:{}'.format(\"アップル\",\"ペン\",\"パイナップル\"))"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "dIYof8-3XCJP"
+      },
       "source": [
         "# コレクション演算\n",
         "リスト、タプル、つまり順番がある集合のことをシーケンスという。\n",
@@ -195,21 +181,11 @@
         "上記２種類をまとめてコレクションという。\n",
         "コレクションは共通の演算が使える。\n",
         "len(長さ、量を取得）、max(最大値を取得),min(最小値を取得)など"
-      ],
-      "metadata": {
-        "id": "dIYof8-3XCJP"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "list = [1,1,2,3,4,5] #6つの要素\n",
-        "tuple = (10,9,7,7,8,8,9)\n",
-        "set = {1,-2,3,-4,5,-6,7,8}\n",
-        "print(len(list),max(list),min(list))\n",
-        "print(len(tuple),max(tuple),min(tuple))\n",
-        "print(len(set),max(set),min(set))"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -217,27 +193,51 @@
         "id": "li3RHCZ-XKu6",
         "outputId": "b6475171-b2e4-410d-d613-33462946168c"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "6 5 1\n",
             "7 10 7\n",
             "8 8 -6\n"
           ]
         }
+      ],
+      "source": [
+        "list = [1,1,2,3,4,5] #6つの要素\n",
+        "tuple = (10,9,7,7,8,8,9)\n",
+        "set = {1,-2,3,-4,5,-6,7,8}\n",
+        "print(len(list),max(list),min(list))\n",
+        "print(len(tuple),max(tuple),min(tuple))\n",
+        "print(len(set),max(set),min(set))\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "dSw3z1xKYzHM"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOmh70KASWdAR7550zJj5GV",
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
